src/objects/QueryCondition__c.object
<CustomObject>
    <fields>
        <fullName>Comparison_Operator__c</fullName>
        <label>Comparison Operator</label>
        <picklist>
            <picklistValues>
                <fullName>=</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>!=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;=</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIKE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOT IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INCLUDES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXCLUDES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field</label>
        <referenceTo>SObjectField__c</referenceTo>
        <relationshipLabel>QueryConditions</relationshipLabel>
        <relationshipName>QueryConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Integer__c</fullName>
        <label>Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <referenceTo>Query__c</referenceTo>
        <relationshipLabel>Conditions</relationshipLabel>
        <relationshipName>Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SObjectType</label>
        <referenceTo>SObjectType__c</referenceTo>
        <relationshipLabel>QueryConditions</relationshipLabel>
        <relationshipName>QueryConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QueryCondition</label>
    <nameField>
        <label>QueryCondition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QueryConditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Field_Type_Match_Integer</fullName>
        <active>true</active>
        <description>The populated criteria must match the field type.</description>
        <errorConditionFormula>AND(  ISPICKVAL(  Field__r.Type__c  , &apos;Integer&apos; ),  ISBLANK(  Integer__c  )  )</errorConditionFormula>
        <errorDisplayField>Integer__c</errorDisplayField>
        <errorMessage>A condition on an Integer type field must have an integer for comparison value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SObjectType_must_match</fullName>
        <active>true</active>
        <errorConditionFormula>Query__r.SObject__c  =  SObjectType__c</errorConditionFormula>
        <errorDisplayField>SObjectType__c</errorDisplayField>
        <errorMessage>SObject Type must match</errorMessage>
    </validationRules>
</CustomObject>